<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SoundShare</string>

    <string name="email_required">Email is required</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="password_length">Password must be at least 8 characters long</string>
    <string name="invalid_email">Invalid email</string>
    <string name="username_length">Username must be at least 6 characters long</string>
    <string name="username_taken">Username is already taken</string>
    <string name="email_taken">Email is already taken</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="date_of_birth_required">Date of birth is required</string>

    <string name="profile_updated">User data updated</string>
    <string name="profile_not_updated">User data couldn\'t be updated</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="artist_name">Artist name</string>
    <string name="cancel">Cancel</string>
    <string name="check">Check</string>
    <string name="create_one_now"><u>Create one now!</u></string>
    <string name="daily_songs">Daily songs</string>
    <string name="date_of_birth">Date of birth (dd/MM/yyyy)</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email">Email</string>
    <string name="friends">%d friends</string>
    <string name="home">Home</string>
    <string name="log_in">Log in</string>
    <string name="log_in_here"><u>Log in here!</u></string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="notification1">\@iker has requested you to be friends</string>
    <string name="notification2">\@jaime has requested you to be friends</string>
    <string name="notification3">\@mar has requested you to be friends</string>
    <string name="notification4">\@david has requested you to be friends</string>
    <string name="ok">OK</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="post_text">Post text</string>
    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string name="profile_image">Profile image</string>
    <string name="repeat_password">Repeat password</string>
    <string name="search">Search</string>
    <string name="search_song">Search song</string>
    <string name="text_post">Start typing</string>
    <string name="search_users">Search users</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="song_image">Song image</string>
    <string name="song_name">Song name</string>
    <string name="username">Username</string>
    <string name="users">Users</string>
    <string name="songs">Songs</string>
    <string name="remove">Remove</string>
    <string name="location">Location</string>
    <string name="dark_mode">Dark mode</string>
    <string name="age_restriction">You must be over 18</string>
    <string name="bot_n_para_buscar_canciones_con_shazam">Search button with Shazam</string>
    <string name="log_out_button">Log out</string>
    <string name="save_changes">Save changes</string>
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Remove friend</string>
    <string name="upload_image">Upload profile image</string>
</resources>