<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.add.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"/>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_song" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/text_users_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_text"
            android:textSize="20sp"
            android:layout_marginStart="25sp"
            android:layout_marginTop="25sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>