<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/song_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_album" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/buttonRemoveSong"
            android:layout_toEndOf="@id/song_image"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/song_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/artist_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/text_post" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonRemoveSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/remove"
            android:padding="8dp"
            android:src="@drawable/ic_close"
            android:visibility="invisible" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
